--- a/.travis.yml
+++ b/.travis.yml
@@ -231,7 +231,7 @@ script:
       if [[ TOXENV =~ cython ]]; then
         twine upload --repository-url https://test.pypi.org/legacy/ --skip-existing dist/*
       fi
-    else:
+    else
       tox -v
     fi
 after_failure:
