--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -1,5 +1,4 @@
 language: python
-sudo: true
 cache: pip
 addons:
   apt:
@@ -16,34 +15,45 @@ env:
     - TOXENV=docs
 matrix:
   include:
-{% for env in tox_environments %}
+{%- for env in tox_environments %}{{ '' }}
     - python: '{{ env.split("-")[0] if env.startswith("pypy") else "{0[2]}.{0[3]}".format(env) }}'
       env:
         - TOXENV={{ env }}{% if "cover" in env %},report,coveralls,codecov{% endif %}
-{% if "pure" not in env and "pypy" not in env and "py27" not in env %}{{ '' }}
-        - CIBW_BUILD=cp{{ env.split("-")[0][2:] }}-manylinux1_x86_64
+{% if "pypy" not in env and "cython-nocov" in env %}{{ '' }}
+        - WHEEL_MANYLINUX1=cp{{ env.split("-")[0][2:] }}-manylinux1_x86_64
+        - WHEEL_PATH=wheelhouse
 {% endif %}
 {% if "py37" in env %}
-      sudo: required
       dist: xenial
 {% endif %}
-
-{% if "pypy" not in env and "cover" not in env %}
+{% if "py37" in env or "py27" in env %}{{ '' }}
     - os: osx
       language: generic
+      cache:
+        directories:
+          - $HOME/Library/Caches/Homebrew
+          - $HOME/Library/Caches/pip
       env:
         - TOXENV={{ env }}
         - SETUPPY_CFLAGS=
-        - CIBW_BUILD=cp{{ env.split("-")[0][2:] }}-*
-{% endif %}
-{% endfor %}
+{%- if "cython-nocov" in env %}
+        - WHEEL_PATH=.tox/dist
+{%- endif %}
+{%- endif %}
+{%- endfor %}
 before_install:
   - python --version
   - uname -a
   - lsb_release -a || true
   - sudo sysctl -w kernel.yama.ptrace_scope=0 || true
+  - |
+    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+      [[ $TOXENV =~ py3 ]] && brew upgrade python
+      [[ $TOXENV =~ py2 ]] && brew install python@2
+      export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
+    fi
 install:
-  - pip install cibuildwheel twine tox-wheel
+  - pip install twine tox-wheel
   - virtualenv --version
   - easy_install --version
   - pip --version
@@ -72,20 +82,14 @@ install:
 script:
   - |
     set -ex
-    if [[ $TOXENV =~ py ]]; then
-      IFS=',' read -ra envs <<< "$TOXENV"
-      tox -e ${envs[0]} -- python -c 'import collections; from hunter import const; from pprint import pprint; pprint({k: v for k, v in vars(const).items() if k.isupper()}); pprint(collections.__file__)'
-    fi
-    if [[ -n "$CIBW_BUILD" ]]; then
-      cibuildwheel --output-dir=dist
-      for wheel in dist/*.whl; do
-        tox --installpkg=$wheel -v
-      done
-      if [[ TOXENV =~ cython ]]; then
-        twine upload --repository-url https://test.pypi.org/legacy/ --skip-existing dist/*
-      fi
+    if [[ -n $WHEEL_MANYLINUX1 ]]; then
+      docker run --rm --user $UID -itv $(pwd):/code ionelmc/manylinux $WHEEL_MANYLINUX1
+      tox --installpkg $WHEEL_PATH/*.whl -v
     else
       tox -v
+    fi
+    if [[ -n $WHEEL_PATH ]]; then
+      twine upload --repository-url https://test.pypi.org/legacy/ --skip-existing $WHEEL_PATH/*
     fi
 after_failure:
   - more .tox/log/* | cat
