--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -20,7 +20,7 @@ matrix:
       env:
         - TOXENV={{ env }}{% if "cover" in env %},report,coveralls,codecov{% endif %}
 {% if "pypy" not in env and "cython-nocov" in env %}{{ '' }}
-        - WHEEL_MANYLINUX1=cp{{ env.split("-")[0][2:] }}-manylinux1_x86_64
+        - WHEEL_MANYLINUX1=cp{{ env.split("-")[0][2:] }}
         - WHEEL_PATH=wheelhouse
 {% endif %}
 {% if "py37" in env %}
